# pythrone

./: README.md  pyproject.toml
c11_pip/: README.md  chapter-11.1-semver.md  chapter-11.2-pip.md
c12_virtual_environment/: README.md  chapter-12.1-virtual-environment-intro.md  chapter-12.2-venv.md  chapter-12.3-pipenv.md  chapter-12.4-poetry.md
c13_advanced_functions/: README.md  chapter-13.1-groupby.md  chapter-13.2-sorted.md  chapter-13.3-filter.md  chapter-13.4-map.md  chapter-13.5-reduce.md
c14_regex/: README.md  chapter-14.3-the-re-module.md
c15_data_structures/: README.md
c16_decorators/: README.md
c17_mixins/: README.md
c18_python_http/: README.md
c19_requests/: README.md
c20_advanced_type_hinting/: README.md
projects/: README.md  srs_hangman.md  srs_rock_paper_scissor.md  srs_school_manager.md
resource/c11_pip/: README.md  chapter-11.1-semver.md
resource/c12_virtual_environment/: README.md  chapter-12.1-virtual-environment-intro.md  chapter-12.2-venv.md  chapter-12.3-pipenv.md  chapter-12.4-poetry.md
resource/c13_advanced_functions/: README.md  chapter-13.2-sorted.md  chapter-13.3-filter.md  chapter-13.4-map.md
resource/c14_regex/: README.md  chapter-14.1-regular-expressions.md  chapter-14.2-regex-special-characters.md
resource/c15_data_structures/: README.md
resource/c16_decorators/: README.md
resource/c17_mixins/: README.md
resource/c18_python_http/: README.md
resource/c19_requests/: README.md
resource/c20_advanced_type_hinting/: README.md
resource/c21_testing/: README.md  chapter-21.1-intro.md  chapter-21.2-unittest.md  (+1 more)
(+4 files in other folders)
